Rewrite(PredictionService) Rewrote the prediction service to be more intuitive and taking into account the data structure