@@ -1,3 +1,5 @@
+package ai.gradwohl.tensorflow;
+
 import org.tensorflow.SavedModelBundle;
 import org.tensorflow.Tensor;
 import org.tensorflow.ndarray.StdArrays;
@@ -12,14 +14,14 @@ public class TensorFlowModelService {
         modelBundle = SavedModelBundle.load(modelDirectory, "serve");
     }
 
-    public TFloat32 predict(float[][] inputData) {
+    public TFloat32 predict(TFloat32 inputData) {
         // Create an input Tensor
         try (TFloat32 inputTensor = TFloat32.tensorOf(StdArrays.ndCopyOf(inputData))) {
             // Run model inference and return the result tensor directly
-            Tensor<?> result = modelBundle.session().runner()
+            Tensor result = modelBundle.session().runner()
                     .feed("serving_default_input_layer_name", inputTensor)
                     .fetch("StatefulPartitionedCall")
-                    .run().get(0);
+                    .run().getFirst();
             // Since the `result` tensor is auto-closable, we cast it to TFloat32 but don't close it here
             // to allow further operations outside this method. It's the caller's responsibility to close it.
             return (TFloat32) result;
